@@ -216,6 +216,12 @@ a business application designed to allow you to manage several aspects of your
 warehouse based enterprise from your computer.
 </ul>
 
+<ul>
+<li><a href="http://keytouch.sourceforge.net/">keyTouch</a> -
+makes it possible to easily configure the extra function keys (like multimedia
+keys) of your keyboard. You can define which program will be executed while
+pressing a key.
+</ul>
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
