@@ -100,6 +100,13 @@ Applications</a></b></font></td></tr></table></center>
 
 
 
+<li><b>Version 2.6.8 (Dec 21 2004)</b>
+<ul>
+<li>Fixed bug that could cause an infinite loop on startup.
+</ul>
+</li><br>
+
+
 <li><b>Version 2.6.7 (Dec 2 2004)</b>
 <ul>
 <li>Fixed crashing bug in GnomeHRef.
