@@ -158,6 +158,25 @@ Oct&nbsp;1&nbsp;2004
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+Dec&nbsp;21&nbsp;2004
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>Glade 2.6.8 released !</B>
+<P>
+Get it at <a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.6/">
+http://ftp.gnome.org/pub/GNOME/sources/glade/2.6/</a>.
+<P>
+<UL>
+<li>Fixed bug that could cause an infinite loop on startup.
+</ul>
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 Dec&nbsp;2&nbsp;2004
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
