@@ -1,3 +1,11 @@
+2004-12-21  Damon Chaplin  <damon@gnome.org>
+
+	* history.html: 
+	* index.html: 
+	* download.html: added info on 2.6.8 release.
+
+	* apps.html: added keyTouch.
+
 2004-12-14  Damon Chaplin  <damon@gnome.org>
 
 	* history.html: 
